--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -3,4 +3,5 @@
     <integer name="config_splash_screen_delay">900</integer>
     <integer name="config_compact_screen_max_width">600</integer>
     <integer name="config_compact_screen_max_height">480</integer>
+    <integer name="config_facility_info_stale_days">7</integer>
 </resources>
