--- a/app/src/main/res/drawable-anydpi/ic_action_food.xml
+++ b/app/src/main/res/drawable-anydpi/ic_action_food.xml
@@ -1,3 +1,10 @@
+<!--
+  ~ Copyright (c) 2025 Maximilian Schwärzler
+  ~
+  ~ This source code is licensed under the MIT license found in the
+  ~ LICENSE file in the root directory of this source tree.
+  -->
+
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
