--- a/app/src/main/res/values/mensa_categories.xml
+++ b/app/src/main/res/values/mensa_categories.xml
@@ -1,4 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?><!--
+  ~ Copyright (c) 2025 Maximilian Schwärzler
+  ~
+  ~ This source code is licensed under the MIT license found in the
+  ~ LICENSE file in the root directory of this source tree.
+  -->
+
 <resources>
     <integer-array name="id_mensas_with_customer_groups">
         <item>1</item>
